Import images and resources when installing solution